# opencv-python

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels_linux.yml  build_wheels_linux_arm.yml  build_wheels_macos.yml  build_wheels_macos_m1.yml  build_wheels_windows.yml
_build_backend/: backend.py
